# testcontainers-demos

./: .gitignore  README.md
nodejs/: README.md  jest.config.js  package.json  pnpm-lock.yaml
nodejs-demo/: README.md  env.d.ts  jest.config.js  jest.setup.js  jest.teardown.js  package.json  pnpm-lock.yaml
nodejs-demo/src/: mongo.ts
nodejs-demo/tests/: mongo_find.spec.ts  mongo_insert.spec.ts  nats.spec.ts
nodejs-demo/tests-utils/: mongo-utils.ts
nodejs/src/: nats.ts
nodejs/tests/: mongo_find.spec.ts  mongo_insert.spec.ts  nats.spec.ts
python-demo/: README.md  pyproject.toml
python-demo/python_demo/: mongo.py
python-demo/tests/: test_mongo.py
